--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "homepage": "https://OlehKosminin.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "install": "^0.13.0",
+    "npm": "^9.5.1",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
